{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 15,
  "lineage": "5d20b2d2-8ac5-ba27-bced-f23e4eaa505e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098f913d8e8ea9c26",
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:elastic-ip/eipalloc-098f913d8e8ea9c26",
            "domain": "vpc",
            "id": "eipalloc-098f913d8e8ea9c26",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-239-165-81.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.165.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:internet-gateway/igw-07d1925cd8dbb2dfa",
            "id": "igw-07d1925cd8dbb2dfa",
            "owner_id": "301508956279",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098f913d8e8ea9c26",
            "association_id": "eipassoc-0e54ac19bd17b8f7f",
            "connectivity_type": "public",
            "id": "nat-08d0d7f4a41dbc8ad",
            "network_interface_id": "eni-034e2b270a8529140",
            "private_ip": "10.0.1.97",
            "public_ip": "13.239.165.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05fbd8064652ba03d",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:route-table/rtb-04a18ccd2272e9b0d",
            "id": "rtb-04a18ccd2272e9b0d",
            "owner_id": "301508956279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d0d7f4a41dbc8ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pvt-rt"
            },
            "tags_all": {
              "Name": "pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:route-table/rtb-06529c243ab157234",
            "id": "rtb-06529c243ab157234",
            "owner_id": "301508956279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d1925cd8dbb2dfa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "tags_all": {
              "Name": "pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00480494b3e903a80",
            "route_table_id": "rtb-04a18ccd2272e9b0d",
            "subnet_id": "subnet-0608e09533913190b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f0a22681d7f6db3",
            "route_table_id": "rtb-04a18ccd2272e9b0d",
            "subnet_id": "subnet-077fd3be6bdccfc47"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b24f26f63c543723",
            "route_table_id": "rtb-06529c243ab157234",
            "subnet_id": "subnet-05fbd8064652ba03d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0728992fe0fcfdb6b",
            "route_table_id": "rtb-06529c243ab157234",
            "subnet_id": "subnet-0cc6d05f8b6ce65e0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-0608e09533913190b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0608e09533913190b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-077fd3be6bdccfc47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077fd3be6bdccfc47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-05fbd8064652ba03d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fbd8064652ba03d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-0cc6d05f8b6ce65e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc6d05f8b6ce65e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0b8286dd5452175c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:vpc/vpc-0b8286dd5452175c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b678c6bbc62af58",
            "default_route_table_id": "rtb-021e28ed01af98eee",
            "default_security_group_id": "sg-06600033590a7a106",
            "dhcp_options_id": "dopt-d4993eb0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8286dd5452175c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021e28ed01af98eee",
            "owner_id": "301508956279",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}